--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "devDependencies": {
     "bluebird": "^2.3.10",
+    "gulp": "^3.8.9",
+    "gulp-istanbul": "^0.3.1",
+    "gulp-mocha": "^1.1.1",
+    "istanbul": "^0.3.2",
     "mocha": "^2.0.1",
     "phridge": "^1.0.7",
     "twit": "^1.1.18"
-  },
-  "scripts": {
-    "start": "node src/index.js",
-    "test": "mocha --recursive tests"
   }
 }
