--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "baconjs": "^0.7.28",
     "bluebird": "^2.3.10",
+    "debug": "^2.1.3",
     "gulp": "^3.8.9",
     "gulp-istanbul": "^0.3.1",
     "gulp-mocha": "^1.1.1",
