--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,9 @@
 {
-    "env": {
-        "node": true
-    },
-    "rules": {
-        "no-script-url": 0,
-        "no-shadow": 0,
-        "consistent-return": 0,
-        "no-console": 0,
-        "no-alert": 0,
-        "indent": 2, // 4 spaces
-        "no-loop-func": 0,
-        
-        // Don't be too picky about the style
-        "no-trailing-spaces": 0,
-        "quotes": 0,
-        "no-underscore-dangle": 0,
-        "eol-last": 0,
-        "new-parens": 0,
-        "key-spacing": 0,
-        "camelcase": 0,
-        "space-infix-ops": 0,
-        "no-multi-spaces": 0,
-        "comma-spacing": 0,
-        "yoda": 0,
-        "no-unused-expressions": 0,
-        
-        // Re-consider later
-        "strict": 0,
-        "curly": 0,
-        "eqeqeq": 0,
-        "no-use-before-define": "nofunc",
-        "no-new": 0,
-        "no-path-concat": 0
-    }
+  "parserOptions": { "ecmaVersion": 2017 },
+  "env": { "node": true },
+  "plugins": ["prettier"],
+  "extends": ["eslint:recommended", "prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
