--- a/package.json
+++ b/package.json
@@ -2,19 +2,26 @@
   "name": "vist-al-twitter",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "lint": "eslint . --fix"
+  },
   "dependencies": {
     "baconjs": "^0.7.28",
     "bluebird": "^2.3.10",
     "debug": "^2.1.3",
     "gulp": "^3.9.1",
-    "gulp-istanbul": "^0.3.1",
     "gulp-mocha": "^1.1.1",
-    "istanbul": "^0.3.2",
     "mocha": "^2.0.1",
     "phridge": "^2.0.0",
     "twit": "^1.1.18"
   },
   "engines": {
     "node": "~8.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.7.2",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "prettier": "^1.7.0"
   }
 }
