--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "mocha 'tests/**/*.js'",
     "lint": "eslint . --fix"
   },
   "dependencies": {
@@ -10,7 +11,6 @@
     "bluebird": "^2.3.10",
     "debug": "^2.1.3",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^1.1.1",
     "mocha": "^2.0.1",
     "phridge": "^2.0.0",
     "twit": "^1.1.18"
