--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "parserOptions": { "ecmaVersion": 2017 },
+  "parserOptions": { "ecmaVersion": 2017, "sourceType": "module" },
   "env": { "node": true },
   "plugins": ["prettier"],
   "extends": ["eslint:recommended", "prettier"],
