--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bluebird": "^2.3.10",
     "debug": "^2.1.3",
     "mocha": "^2.0.1",
-    "phridge": "^2.0.0",
+    "puppeteer": "^0.11.0",
     "twit": "^1.1.18"
   },
   "devDependencies": {
