--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "baconjs": "^0.7.28",
     "bluebird": "^2.3.10",
     "debug": "^2.1.3",
+    "dotenv": "^4.0.0",
     "mocha": "^2.0.1",
     "puppeteer": "^0.11.0",
     "twit": "^1.1.18"
